<resources>
    <string name="facebook_app_id">324732193798809</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="app_name">Job oishi</string>
    <string name="ho_n_thi_n_h_s">HOÀN THIỆN HỒ SƠ</string>
    <string name="h_s_glints">Hồ sơ Glints</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title">Tiêu đề</string>
    <string name="todo">TODO</string>
    <string name="text_view_label_profile">Hoàn thiện hồ sơ để tăng khả năng nhà tuyền dụng tìm thấy bạn !</string>
    <string name="t_ng_c_h_i_c_nh_tuy_n_d_ng_nh_n_th_y">Tăng cơ hội được nhà tuyển dụng nhìn thấy</string>
    <string name="c_ng_vi_c_g_n_nh_t">Công việc gân nhất ?</string>
    <string name="th_m_kinh_nghi_m_l_m_vi_c_cho_nh_tuy_n_d_ng_th_y_c_th_nh_t_u_v_tr_nh_nhi_m_m_b_n_l_m_c">Thêm kinh nghiệm làm việc cho nhà tuyển dụng thấy được thành tựu và tránh nhiệm mà bạn làm được</string>
    <string name="test">test</string>
    <string name="b_sung_th_ng_tin_c_nh_n_v_th_m_t_nh_t_1_m_c_cho_kinh_nghi_m_l_m_vi_c_v_h_c_v_n_t_th_m_1_sao">Bổ sung thông tin cá nhân và thêm ít nhất 1 mục cho Kinh nghiệm làm việc và Học vấn</string>
    <string name="xu_t_vi_c_l_m_ch_nh_x_c_h_n_0_1">Đề xuất việc làm chính xác hơn</string>
    <string name="h_s_n_i_b_t_h_n_0_2">Hồ sơ nổi bật hơn</string>
    <string name="profile">Hồ sơ</string>
    <string name="nguy_n_ti_n_t">Nguyễn Tiến Đạt</string>
    <string name="th_nh_ph_h_ch_minh">Thành phố Hồ Chí Minh</string>
    <string name="birth_text">Ngày sinh</string>
    <string name="gender_text">Giới tính</string>
    <string name="none_value">-</string>
    <string name="edu_level">Trình độ học vấn</string>
    <string name="year_experience">Năm kinh nghiệm</string>
    <string name="experience_text">Kinh nghiệm làm việc</string>
    <string name="experience_des">Thêm kinh nghiêm làm việc để tăng cơ hội làm việc trong mắt nhà tuyển dụng, 77% nhà tuyển dụng ưu tiên quan tâm khi xét duyệt hồ sơ</string>
    <string name="edu_text">Học vấn</string>
    <string name="edu_des">Thêm học vấn của bạn để tăng cơ hội khi ứng tuyển</string>
    <string name="suggest_job_label">Đề xuất việc làm chính xác hơn</string>
    <string name="skill_label">Thêm ít nhất 3 kỹ năng</string>
    <string name="skill_text">Kỹ năng</string>
    <string name="skill_des">Tôi thiểu 3 kỹ năng</string>
    <string name="profile_label">Hồ sơ nổi bật hơn (0 / 2)</string>
    <string name="add_profile_des">viết giới thiệu vê bản thân (tối thiểu 80 ký tự) để đạt thêm 1 sao</string>
    <string name="introduce_text">Giới thiệu bản thân</string>
    <string name="introduce_des">Giới thiệu bản thân để nhà tuyển dụng hiểu hơn vể bạn (tối thiểu 80 ký tự)</string>
    <string name="reward_label">Giải thưởng</string>
    <string name="reward_des">Thêm ít nhất một giải thưởng cho nhà tuyển dụng biết thành tựu mà bạn đã đạt được</string>
    <string name="certification_label">Chứng nhận</string>
    <string name="certification_des">Thêm các chứng nhận mà bạn có thể gây ấn tượng với nhà tuyển dụng</string>
    <string name="linked_label">Liên kết bổ sung</string>
    <string name="liked_des">Thêm các liên kết bổ sung để có một hồ sơ hoản hảo</string>
    <string name="profile_toolbar_title">Hồ sơ</string>
    <string name="edit_profile_toolbar_title">Chỉnh sửa hồ sơ</string>
    <string name="job_criteria_toolbar_title">Tiêu chí công việc</string>
    <string name="job_major_toolbar_title">Công việc mong muốn</string>
    <string name="btn_save_label">Lưu</string>
    <string name="label_input_name">Tên</string>
    <string name="your_name_label">Tên của bạn</string>
    <string name="valid_input_label">Không được để trống</string>
    <string name="firstname_label">Họ</string>
    <string name="your_firstname_label">Họ của bạn</string>
    <string name="country">Quốc gia</string>
    <string name="h_ch_minh">Hồ Chí Minh</string>
    <string name="country_bs_label">Quốc gia</string>
    <string name="find_ct">Tìm quốc gia</string>
    <string name="vietnam">Vietnam</string>
    <string name="city">Tỉnh/Thành phố</string>
    <string name="vn">Việt Nam</string>
    <string name="find_city">Tìm Tỉnh/Thành phố</string>
    <string name="birth">Ngày sinh</string>
    <string name="_01_01_2000">01/01/2000</string>
    <string name="gender_male">Nam</string>
    <string name="experience_label">Thời điểm bạn bắt đầu công việc đầu tiên</string>
    <string name="cd">Cao Đẳng</string>
    <string name="not_experience">Tôi chưa có kinh nghiệm</string>
    <string name="have_expe_qus">Bạn đã có kinh nghiệm làm việc ?</string>
    <string name="year_expe">Năm kinh nghiệm</string>
    <string name="date">Ngày</string>
    <string name="th_ng">Tháng</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="first_job_qs">Bạn đi làm đâu tiên là khi nào ?</string>
    <string name="a_year_exp">1 năm kinh nghiệm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">Cho bạn</string>
    <string name="my_job">Việc của tôi</string>
    <string name="i">Tôi</string>
    <string name="desired_job">Công việc mong muốn</string>
    <string name="desired_job_des">Job oishi vừa cập nhật lại danh sách tiêu chí công việc. Vui lòng kiểm tra và bấm chỉnh sửa để cập nhật lại</string>
    <string name="enter_job_pos">Nhập vị trí công việc</string>
    <string name="chose_more_3_option">Bạn có thể chọn thêm 3 lựa chọn</string>
    <string name="backend_developer">Backend Developer</string>
    <string name="desired_job_place">Địa điểm làm việc mong muốn</string>
    <string name="desired_job_place_des">Job oishi sẽ đề xuất các công việc dựa trên địa điểm mong muốn của bạn. Nếu muốn cập nhật địa chỉ hiện tại, chỉnh sửa ở đây</string>
    <string name="enter_city_name">Nhập tên thành phố</string>
    <string name="HCM_city">Thành phố Hồ Chí Minh</string>
    <string name="want_salary">Mức lương tháng kì vọng</string>
    <string name="currency_vnd">VND</string>
    <string name="_0_6_tr">0 - 6 Tr</string>
    <string name="chose_form_of_job">Chọn hinh thức làm việc</string>
    <string name="place_working">Địa điểm làm việc</string>
    <string name="fulltime">Toàn thời gian</string>
    <string name="parttime">Bán thời gian</string>
    <string name="every_day">Mỗi ngày</string>
    <string name="min">Tối thiểu</string>
    <string name="max">Tối đa</string>
    <string name="delete_my_account">Delete My Account?</string>
    <string name="all_activities_e_g_job_applications_will_be_gone">All activities, e.g. job applications, will be gone.</string>
    <string name="if_you_previous_or_currently_use_job_oishii_contact_customer_support_for_deletion">If you previous or currently use Job Oishii, contact Customer Support for deletion.</string>
    <string name="delete_my_account_1">DELETE MY ACCOUNT</string>
    <string name="cancel">Cancel</string>
    <string name="delection_is_permanent_and_connot_be_undone">Delection is permanent and connot be undone.</string>
    <string name="logout_my_account">Logout My Account?</string>
    <string name="do_you_want_logout_your_account">Do you want logout your account?</string>
    <string name="ok">OK</string>
    <string name="cancel_1">Cancel</string>
    <string name="kh_i_ph_c">Khôi phục</string>
    <string name="p_d_ng">Hủy</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="register_user">Register User</string>
    <string name="ng_nh_p_ngay">ĐĂNG NHẬP NGAY</string>
    <string name="ng_k">ĐĂNG KÝ</string>
    <string name="x_c_nh_n_m_t_kh_u">Xác nhận mật khẩu</string>
    <string name="nh_p_t_n">Nhập Tên</string>
    <string name="nh_p_h">Nhập Họ</string>
    <string name="phi_n_b_n_ng_d_ng_1_47_2_0_296">Phiên bản ứng dụng 1.47.2+0(296)</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="ng_n_ng_language">Ngôn ngữ / Language</string>
    <string name="i_u_kho_n_s_d_ng">Điều khoản sử dụng</string>
    <string name="ch_nh_s_ch_b_o_m_t">Chính sách bảo mật</string>
    <string name="h_tr_amp_c_u_h_i_th_ng_g_p"><![CDATA[Hỗ trợ & câu hỏi thường gặp]]></string>
    <string name="g_p">Góp ý</string>
    <string name="t_i_kho_n">Tài khoản</string>
    <string name="email_m_t_kh_u_v_s_i_n_tho_i">Email, mật khẩu và số điện thoại</string>
    <string name="th_ng_b_o">Thông báo</string>
    <string name="success">Success</string>
    <string name="ng_tuy_n_th_nh_c_ng">Ứng tuyển thành công.</string>
    <string name="okay">Okay</string>
</resources>