<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".Activities.RegisterUserActivity">

    <TextView
        style="@style/Profile_Title_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/register_user"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:hint="@string/nh_p_h"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:hint="@string/nh_p_t_n"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:hint="@string/nh_p_email"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:hint="@string/nh_p_m_t_kh_u"
        android:inputType="textPassword"
        android:padding="16dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:hint="@string/x_c_nh_n_m_t_kh_u"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:padding="16dp"
        android:text="@string/ng_k"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login_textview"
        style="@style/Profile_Normal_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ng_nh_p_ngay"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>