<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_change_language"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        style="@style/Profile_Title_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_my_account"
        android:textSize="18sp" />

    <TextView
        style="@style/Profile_Normal_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="@string/do_you_want_logout_your_account"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/oke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/ok"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_disable"
        android:text="@string/cancel_1"
        android:textColor="@color/blue" />
</LinearLayout>