<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_item_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/border_radius"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_circle_bg"
            android:contentDescription="@string/todo"
            android:padding="8dp"
            android:src="@drawable/build_svgrepo_com" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/item_title"
                style="@style/Profile_Title_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_ng_vi_c_g_n_nh_t" />

            <TextView
                android:id="@+id/item_des"
                style="@style/Profile_Normal_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/th_m_kinh_nghi_m_l_m_vi_c_cho_nh_tuy_n_d_ng_th_y_c_th_nh_t_u_v_tr_nh_nhi_m_m_b_n_l_m_c" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_outline"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/test"
                android:textColor="@color/blue"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>