<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".Activities.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                style="@style/Profile_Normal_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_i_kho_n"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                style="@style/Profile_Normal_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_m_t_kh_u_v_s_i_n_tho_i" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingRight="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:id="@+id/btn_change_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_next" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                style="@style/Profile_Normal_TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/th_ng_b_o"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingRight="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:id="@+id/btn_thong_bao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_next" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <LinearLayout
        android:id="@+id/btn_gop_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/Profile_Normal_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_p"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <LinearLayout
        android:id="@+id/btn_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/Profile_Normal_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_tr_amp_c_u_h_i_th_ng_g_p"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <LinearLayout
        android:id="@+id/btn_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/Profile_Normal_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ch_nh_s_ch_b_o_m_t"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <LinearLayout
        android:id="@+id/dieu_khoan_su_dung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/Profile_Normal_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_u_kho_n_s_d_ng"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <LinearLayout
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/Profile_Normal_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ng_n_ng_language"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2bec3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        style="@style/Profile_Title_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edit_button"
        android:text="@string/ng_xu_t"
        android:textAllCaps="false"
        android:textColor="#1576A4"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_version"
        style="@style/Profile_Normal_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phi_n_b_n_ng_d_ng_1_47_2_0_296"
        android:textColor="@color/black" />
</LinearLayout>
