<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_change_language"
    android:orientation="vertical">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_weight="1"
            android:id="@+id/btn_close_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/todo"
            android:src="@drawable/close_1511_svgrepo_com" />

        <TextView
            style="@style/Profile_Title_TextView"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:text="" />


        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:text="@string/kh_i_ph_c"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_option_type_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/background_button"
        android:text="@string/p_d_ng"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
